관리자 화면 / 식당 검색 필터링 예제 / 페이지네이션

--- a/frontend/view/admin/srAdminLogin.html
+++ b/frontend/view/admin/srAdminLogin.html
@@ -39,7 +39,7 @@
   <div id="spinner" class="show w-100 vh-100 bg-white position-fixed translate-middle top-50 start-50  d-flex align-items-center justify-content-center">
     <div class="spinner-grow text-warning" role="status"></div>
   </div>
-  <div id="app" class="bg-white" v-if="loginYN">
+  <div id="app" class="bg-white" v-if="!loginYN">
     <div class="container mt-5 mb-5 text-center">
       <a class="navbar-brand fs-3 text-warning fw-bold" href="#"><img src="/assets/mainIcon.png"> SmartReserve</a>
       <div class="text-right">
