--- a/frontend/view/owner/index.html
+++ b/frontend/view/owner/index.html
@@ -15,6 +15,12 @@
     <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="/css/owner/style.css" rel="stylesheet" />
     <link href="/css/owner/mainlogo.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/owner/index.css">
+
+    <!-- fullcalenda CDN -->
+    <script src="
+    https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js
+    "></script>
 
     <!-- JavaScript Libraries -->
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
@@ -132,46 +138,9 @@
         </nav>
         <!-- Navbar End -->
 
-        <div id="reviewLists" class="container-fluid pt-4 px-4">
-          <div class="bg-light text-center rounded p-4">
-            <div class="d-flex align-items-center justify-content-between mb-4">
-              <h6 class="mb-0">최근 리뷰</h6>
-              <a href="">전체 보기</a>
-            </div>
-            <div class="table-responsive">
-              <table class="table text-start align-middle table-bordered table-hover mb-0">
-                <thead>
-                  <tr class="text-dark">
-                    <th scope="col"><input class="form-check-input" type="checkbox" /></th>
-                    <th scope="col">리뷰 ID</th>
-                    <th scope="col">가게 ID</th>
-                    <th scope="col">유저 ID</th>
-                    <th scope="col">점수</th>
-                    <th scope="col">내용</th>
-                    <th scope="col">작성 날짜</th>
-                    <th scope="col">삭제 요청</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <!-- 최대 5개만 보여줌 -->
-                  <tr v-for="(review, index) in reviews.slice(0, 5)" :key="review.reviewId">
-                  <!-- <tr v-for="(review, index) in reviews" :key="review.reviewId"> 전체 리뷰 for문 -->
-                    <th scope="col"><input class="form-check-input" type="checkbox" /></th>
-                    <td>{{ review.reviewId }}</td>
-                    <td>{{ review.storeId }}</td>
-                    <td>{{ review.userId }}</td>
-                    <td>{{ review.score }}</td>
-                    <td>{{ review.content }}</td>
-                    <td>{{ formatDate(review.createAt) }}</td> <!-- vue js에서 작성한 함수 -->
-                    <td><button class="btn btn-danger btn-block" @click="deleteReq(review.reviewId)">삭제 요청</button>({{ review.deleteReq }})</td> 
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
-        </div>
-        <!-- Sale & Revenue Start -->
-        <div class="container-fluid pt-4 px-4">
+       
+         <!-- Sale & Revenue Start -->
+         <div class="container-fluid pt-4 px-4 mb-4">
           <div class="row g-4">
             <div class="col-sm-6 col-xl-3">
               <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
@@ -212,15 +181,13 @@
           </div>
         </div>
         <!-- Sale & Revenue End -->
-
         <!-- Sales Chart Start -->
-        <div class="container-fluid pt-4 px-4">
+        <div class="container-fluid pt-4 px-4 mb-4" >
           <div class="row g-4">
             <div class="col-sm-12 col-xl-6">
               <div class="bg-light text-center rounded p-4">
                 <div class="d-flex align-items-center justify-content-between mb-4">
-                  <h6 class="mb-0">전 세계 판매 수익</h6>
-                  <a href="">전체 보기</a>
+                  <h6 class="mb-0">최근 6개월 매출 추이</h6>
                 </div>
                 <canvas id="worldwide-sales"></canvas>
               </div>
@@ -228,8 +195,7 @@
             <div class="col-sm-12 col-xl-6">
               <div class="bg-light text-center rounded p-4">
                 <div class="d-flex align-items-center justify-content-between mb-4">
-                  <h6 class="mb-0">판매 및 수익</h6>
-                  <a href="">전체 보기</a>
+                  <h6 class="mb-0">최근 6개월 결제 수 추이</h6>
                 </div>
                 <canvas id="salse-revenue"></canvas>
               </div>
@@ -238,128 +204,104 @@
         </div>
         <!-- Sales Chart End -->
 
+        <!-- Calendar -->
+        <div id='calendar'></div>
+       
 
-        <!-- Widgets Start -->
-        <div class="container-fluid pt-4 px-4">
-          <div class="row g-4">
-            <div class="col-sm-12 col-md-6 col-xl-4">
-              <div class="h-100 bg-light rounded p-4">
-                <div class="d-flex align-items-center justify-content-between mb-2">
-                  <h6 class="mb-0">메세지</h6>
-                  <a href="">전체 보기</a>
-                </div>
-                <div class="d-flex align-items-center border-bottom py-3">
-                  <img class="rounded-circle flex-shrink-0" src="" alt="" style="width: 40px; height: 40px" />
-                  <div class="w-100 ms-3">
-                    <div class="d-flex w-100 justify-content-between">
-                      <h6 class="mb-0">bca@abc.com</h6>
-                      <small>~ 분 전</small>
-                    </div>
-                    <span>홍길동 님이 ~분 전에 가게 예약을 요청하였습니다</span>
-                  </div>
-                </div>
-                <div class="d-flex align-items-center border-bottom py-3">
-                  <img class="rounded-circle flex-shrink-0" src="" alt="" style="width: 40px; height: 40px" />
-                  <div class="w-100 ms-3">
-                    <div class="d-flex w-100 justify-content-between">
-                      <h6 class="mb-0">bcd@abc.com</h6>
-                      <small>~분 전</small>
-                    </div>
-                    <span>홍길북 님의 가게 요청을 승인해주세요</span>
-                  </div>
-                </div>
-                <div class="d-flex align-items-center border-bottom py-3">
-                  <img class="rounded-circle flex-shrink-0" src="" alt="" style="width: 40px; height: 40px" />
-                  <div class="w-100 ms-3">
-                    <div class="d-flex w-100 justify-content-between">
-                      <h6 class="mb-0">baca@abc.com</h6>
-                      <small>~분 전</small>
-                    </div>
-                    <span>홍길순 님이 ~분 전에 가게 예약을 취소하였습니다</span>
-                  </div>
-                </div>
-                <div class="d-flex align-items-center pt-3">
-                  <img class="rounded-circle flex-shrink-0" src="" alt="" style="width: 40px; height: 40px" />
-                  <div class="w-100 ms-3">
-                    <div class="d-flex w-100 justify-content-between">
-                      <h6 class="mb-0">bca12@abc.com</h6>
-                      <small>~분 전</small>
-                    </div>
-                    <span>홍길남 님의 결제가 완료되었습니다</span>
-                  </div>
-                </div>
-              </div>
+
+        <!-- 최근 리뷰 -->
+        <div id="reviewLists" class="container-fluid pt-4 px-4">
+          <div class="bg-light text-center rounded p-4">
+            <div class="d-flex align-items-center justify-content-between mb-4">
+              <h6 class="mb-0">최근 리뷰</h6>
+              <a href="">전체 보기</a>
             </div>
-            <div class="col-sm-12 col-md-6 col-xl-4">
-              <div class="h-100 bg-light rounded p-4">
-                <div class="d-flex align-items-center justify-content-between mb-4">
-                  <h6 class="mb-0">날짜</h6>
-                  <a href="">전체 보기</a>
-                </div>
-                <div id="calender"></div>
-              </div>
+            <div class="table-responsive">
+              <table class="table text-start align-middle table-bordered table-hover mb-0">
+                <thead>
+                  <tr class="text-dark">
+                    <!-- <th scope="col"><input class="form-check-input" type="checkbox" /></th> -->
+                    <th scope="col">리뷰 ID</th>
+                    <th scope="col">가게 ID</th>
+                    <th scope="col">유저 ID</th>
+                    <th scope="col">점수</th>
+                    <th scope="col">내용</th>
+                    <th scope="col">작성 날짜</th>
+                    <th scope="col">삭제 요청</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <!-- 최대 5개만 보여줌 -->
+                  <tr v-for="(review, index) in reviews.slice(0, 5)" :key="review.reviewId">
+                  <!-- <tr v-for="(review, index) in reviews" :key="review.reviewId"> 전체 리뷰 for문 -->
+                    <!-- <th scope="col"><input class="form-check-input" type="checkbox" /></th> -->
+                    <td>{{ review.reviewId }}</td>
+                    <td>{{ review.storeId }}</td>
+                    <td>{{ review.userId }}</td>
+                    <td>{{ review.score }}</td>
+                    <td>{{ review.content }}</td>
+                    <td>{{ formatDate(review.createAt) }}</td> <!-- vue js에서 작성한 함수 -->
+                    <td><button class="btn btn-danger btn-block" @click="deleteReq(review.reviewId)">삭제 요청</button>({{ review.deleteReq }})</td> 
+                  </tr>
+                </tbody>
+              </table>
             </div>
-            <div class="col-sm-12 col-md-6 col-xl-4">
-              <div class="h-100 bg-light rounded p-4">
-                <div class="d-flex align-items-center justify-content-between mb-4">
-                  <h6 class="mb-0">할일</h6>
-                  <a href="">전체 보기</a>
-                </div>
-                <div class="d-flex mb-2">
-                  <input class="form-control bg-transparent" type="text" placeholder="검색어를 입력하세요" />
-                  <button type="button" class="btn btn-primary ms-2">search</button>
-                </div>
-                <div class="d-flex align-items-center border-bottom py-2">
-                  <input class="form-check-input m-0" type="checkbox" />
-                  <div class="w-100 ms-3">
-                    <div class="d-flex w-100 align-items-center justify-content-between">
-                      <span>고래고래</span>
-                      <button class="btn btn-sm"><i class="fa fa-times"></i></button>
-                    </div>
-                  </div>
-                </div>
-                <div class="d-flex align-items-center border-bottom py-2">
-                  <input class="form-check-input m-0" type="checkbox" />
-                  <div class="w-100 ms-3">
-                    <div class="d-flex w-100 align-items-center justify-content-between">
-                      <span>소리지르기</span>
-                      <button class="btn btn-sm"><i class="fa fa-times"></i></button>
-                    </div>
-                  </div>
-                </div>
-                <div class="d-flex align-items-center border-bottom py-2">
-                  <input class="form-check-input m-0" type="checkbox" checked />
-                  <div class="w-100 ms-3">
-                    <div class="d-flex w-100 align-items-center justify-content-between">
-                      <span><del>고함지르기</del></span>
-                      <button class="btn btn-sm text-primary"><i class="fa fa-times"></i></button>
-                    </div>
-                  </div>
-                </div>
-                <div class="d-flex align-items-center border-bottom py-2">
-                  <input class="form-check-input m-0" type="checkbox" />
-                  <div class="w-100 ms-3">
-                    <div class="d-flex w-100 align-items-center justify-content-between">
-                      <span>윽박지르기</span>
-                      <button class="btn btn-sm"><i class="fa fa-times"></i></button>
-                    </div>
-                  </div>
-                </div>
-                <div class="d-flex align-items-center pt-2">
-                  <input class="form-check-input m-0" type="checkbox" />
-                  <div class="w-100 ms-3">
-                    <div class="d-flex w-100 align-items-center justify-content-between">
-                      <span>심호흡하기</span>
-                      <button class="btn btn-sm"><i class="fa fa-times"></i></button>
-                    </div>
-                  </div>
-                </div>
+          </div>
+        </div>
+        
+        <!-- 최근 예약 -->
+        <div id="reviewLists" class="container-fluid pt-4 px-4">
+          <div class="bg-light text-center rounded p-4">
+            <div class="d-flex align-items-center justify-content-between mb-4">
+              <h6 class="mb-0">최근 예약</h6>
+              <a href="">전체 보기</a>
+            </div>
+            <div class="table-responsive">
+              <table class="table text-start align-middle table-bordered table-hover mb-0">
+                <thead>
+                  <tr class="text-dark">
+                    <!-- <th scope="col"><input class="form-check-input" type="checkbox" /></th> -->
+                    <th scope="col">예약 ID</th>
+                    <th scope="col">가게 ID</th>
+                    <th scope="col">고객명</th>
+                    <th scope="col">인원수</th>
+                    <th scope="col">메모</th>
+                    <th scope="col">예약 날짜</th>
+                    <th scope="col">예약 상태</th>
+                    <th scope="col">예약 상태 변경</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <!-- 최대 5개만 보여줌 -->
+                  <tr v-for="(reserve, index) in reserves.slice(0, 5)" :key="reserve.reserveId">
+                    <!-- <th scope="col"><input class="form-check-input" type="checkbox" /></th> -->
+                    <td>{{ reserve.reserveId }}</td>
+                    <td>{{ reserve.storeId }}</td>
+                    <td>{{ reserve.name }}</td>
+                    <td>{{ reserve.people }}</td>
+                    <td>{{ reserve.memo }}</td>
+                    <td>{{ reserve.reserveTime }}</td> 
+                    <td>
+                      <span v-if="reserve.statusCodeId === 1">대기</span>
+                      <span v-else-if="reserve.statusCodeId === 2">승인</span>
+                      <span v-else-if="reserve.statusCodeId === 3">취소</span>
+                      <span v-else-if="reserve.statusCodeId === 4">완료</span>
+                    </td> 
+                    <td>
+                      <select class="form-select" v-model="reserve.selectedStatus">
+                        <option value="1">대기</option>
+                        <option value="2">승인</option>
+                        <option value="3">취소</option>
+                        <option value="4">완료</option>
+                      </select>
+                      <button class="btn btn-danger btn-block" @click="updateReserveStatus(reserve.reserveId, reserve.selectedStatus)">예약 상태 업데이트</button></td> 
+                    </tr>
+                  </tbody>
+                </table>
               </div>
             </div>
           </div>
         </div>
-        <!-- Widgets End -->
-
         <!-- Footer Start -->
         <div class="container-fluid pt-4 px-4">
           <div class="bg-light rounded-top p-4">
