--- a/frontend/view/admin/srAdminIndex.html
+++ b/frontend/view/admin/srAdminIndex.html
@@ -57,6 +57,30 @@
         <!-- Navbar End -->
 
         <!-- Sale & Revenue Start -->
+         <!-- Sales Chart Start -->
+        <div class="container-fluid pt-4 px-4">
+          <div class="row g-4">
+            <div class="col-sm-12 col-xl-6">
+              <div class="bg-light text-center rounded p-4">
+                <div class="d-flex align-items-center justify-content-between mb-4">
+                  <h6 class="mb-0">최근 6개월 매출 통계</h6>
+                </div>
+                <canvas id="worldwide-sales"></canvas>
+              </div>
+            </div>
+            <div class="col-sm-12 col-xl-6">
+              <div class="bg-light text-center rounded p-4">
+                <div class="d-flex align-items-center justify-content-between mb-4">
+                  <h6 class="mb-0">판매 및 수익</h6>
+                  <a href="">전체 보기</a>
+                </div>
+                <canvas id="salse-revenue"></canvas>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Sales Chart End -->
+         
         <div class="container-fluid pt-4 px-4">
           <div class="row g-4">
             <div class="col-sm-6 col-xl-3">
@@ -160,30 +184,7 @@
           </div>
         </div>
 
-        <!-- Sales Chart Start -->
-        <div class="container-fluid pt-4 px-4">
-          <div class="row g-4">
-            <div class="col-sm-12 col-xl-6">
-              <div class="bg-light text-center rounded p-4">
-                <div class="d-flex align-items-center justify-content-between mb-4">
-                  <h6 class="mb-0">월별 매출 통계</h6>
-                  <a href="">전체 보기</a>
-                </div>
-                <canvas id="worldwide-sales"></canvas>
-              </div>
-            </div>
-            <div class="col-sm-12 col-xl-6">
-              <div class="bg-light text-center rounded p-4">
-                <div class="d-flex align-items-center justify-content-between mb-4">
-                  <h6 class="mb-0">판매 및 수익</h6>
-                  <a href="">전체 보기</a>
-                </div>
-                <canvas id="salse-revenue"></canvas>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- Sales Chart End -->
+        
 
 
         <!-- Widgets Start -->
